2010-11-06  Robert Larice
 * src/frontend/subckt.c ,
 * src/spicelib/parser/inppas2.c :
    minor rewrite, avoid type conversion warnings

2010-11-06  Robert Larice
 * src/spicelib/devices/bsim1/b1.c ,
 * src/spicelib/devices/bsim1/b1dset.c ,
 * src/spicelib/devices/bsim1/b1eval.c ,
 * src/spicelib/devices/bsim1/b1mpar.c ,
 * src/spicelib/devices/bsim1/bsim1def.h :
    change the bsim1 `xpart' model parameter from IF_REAL to IF_FLAG
      which has been used internaly as boolean anyway.

2010-11-06  Robert Larice
 * src/spicelib/devices/nbjt/nbjt.c ,
 * src/spicelib/devices/nbjt/nbjtparm.c ,
 * src/spicelib/devices/nbjt2/nbt2.c ,
 * src/spicelib/devices/nbjt2/nbt2parm.c ,
 * src/spicelib/devices/numd/numd.c ,
 * src/spicelib/devices/numd/numdparm.c ,
 * src/spicelib/devices/numd2/nud2.c ,
 * src/spicelib/devices/numd2/nud2parm.c ,
 * src/spicelib/devices/numos/numm.c ,
 * src/spicelib/devices/numos/nummparm.c ,
 * src/spicelib/devices/urc/urc.c ,
 * src/spicelib/devices/urc/urcparam.c :
    change some model parameters from IF_REAL to IF_INTEGER
      which have been internaly integers anyway.
    (model parameters `save' `print' and urc `n'==`number of lumps')

2010-11-06  Dietmar Warning
 * configure.ac, visualc/include/config.h, frontend/miscoms.c, mos1-9/*.c
 * remove two really ancient configuration options:
 * NOSQRT: Nobody want use log/exp instead of sqrt
 * CAPZEROBYPASS: Nobody want calculate 0.0 * x
 * analysis/dctran.c: limit the order to 1 if backward Euler is enabled

2010-11-04  Robert Larice
 * src/misc/string.c ,
 * src/misc/stringutil.h :
    minor modification of strtolower(), and implement strtoupper()

2010-11-04  Robert Larice
 * src/frontend/plotting/x11.c :
    minor rewrite, fix a minor bug in the x11 zoom-in function
      the rectangle was not always drawn correct,
      when draging the mouse in all directions.

2010-11-04  Robert Larice
 * src/frontend/help/x11disp.c ,
 * src/frontend/plotting/x11.c :